--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 
-version: '3.8'
+version: '3'
 
 services:
   web:
-    context: .
-    dockerfile: Dockerfile
+    build:
+      context: .
+      dockerfile: Dockerfile
     command: gunicorn -c config/prod.py
     ports:
       - 8001:8000
