--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       dockerfile: Dockerfile
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate && 
+                    python manage.py collectstatic &&
                     gunicorn -c config/prod.py"
     ports:
       - 8001:8000
