--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
 #    ports:
 #      - 8001:80
     env_file:
-      - ./.env.dev
+      - ./.env
     volumes:
       - ./data/:/home/app/service/data/
       - static_volume:/home/app/service/staticfiles
